# lombok-macros

./: .gitignore  Cargo.toml  README.md  readme.md
debug/: 1.rs  Cargo.toml
debug/src/: main.rs
sh/: init.sh
src/: lib.rs
src/cfg/: impl.rs  struct.rs  type.rs
src/config/: impl.rs  mod.rs  struct.rs
src/func/: enum.rs  impl.rs  mod.rs  type.rs
src/generate/: const.rs  constant.rs  fn.rs  func.rs  mod.rs
src/parse/: const.rs  constant.rs  fn.rs  func.rs  mod.rs
src/visibility/: enum.rs  fn.rs  impl.rs  mod.rs  type.rs
tests/: comprehensive_reference_clone_test.rs  reference_clone_test.rs
