[package]
name = "lombok-macros"
version = "1.12.2"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A collection of procedural macros for Lombok-like functionality in Rust."""
keywords = ["proc-macro", "get-set", "macros", "lombok", "code-generation"]
repository = "https://github.com/eastspire/lombok-macros.git"
categories = ["development-tools"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github",
    "debug"
]

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"

[lib]
proc-macro = true

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
