[package]
name = "lombok-macros"
version = "1.13.14"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A Rust procedural macro collection providing Lombok-like functionality. Automatically generates getters/setters with field-level visibility control, custom Debug implementations with field skipping, and Display trait implementations. Supports structs, enums, generics and lifetimes."""
keywords = ["proc-macro", "get-set", "macros", "lombok", "code-generation"]
repository = "https://github.com/crates-dev/lombok-macros.git"
categories = ["development-tools"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github",
    "debug"
]

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"

[lib]
proc-macro = true

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
