[package]
name = "lombok-macros"
version = "2.0.19"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A Rust procedural macro collection providing Lombok-like functionality. Automatically generates getters/setters with field-level visibility control, custom Debug implementations with field skipping, and Display trait implementations. Supports structs, enums, generics and lifetimes."""
keywords = ["proc-macro", "get-set", "macros", "lombok", "code-generation"]
repository = "https://github.com/crates-dev/lombok-macros.git"
categories = ["development-tools"]
exclude = ["target", "Cargo.lock", "sh", ".github", "debug"]

[dependencies]
syn = "2.0.114"
quote = "1.0.43"
proc-macro2 = "1.0.105"

[lib]
proc-macro = true

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
